--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/styled": "^11.11.5",
     "canvas-confetti": "^1.9.3",
+    "destyle.css": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
